Googleサイトの確認用メタタグを追加し、関連HTMLファイルを削除

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -150,7 +150,7 @@ const bannerOffset =
 		<link rel="alternate" type="application/rss+xml" title={profileConfig.name} href={`${Astro.site}rss.xml`}/>
 
 		<GoogleAnalytics id="G-FDT1SE9DM6" />
-
+		<meta name="google-site-verification" content="P8Nc4MG1jMidGflMI6uZtwhP7Su7-MkUg_UD2_Z3qXM" />
 	</head>
 	<body class=" min-h-screen transition " class:list={[{"lg:is-home": isHomePage, "enable-banner": enableBanner}]}
 		  data-overlayscrollbars-initialize
